@@ -8,22 +8,26 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
+
 
 public class WikiMediator {
+    Wiki wiki = new Wiki.Builder().withDomain("en.wikipedia.org").build();
     FSFTBuffer cache;
-    Wiki wiki;
     HashMap<String, ArrayList> pageSearches; //stores timestamps for search and get queries
     ArrayList methodsCalls; // stores tiemstamps for all method calls
-    Long StartTime;
+    Integer StartTime;
+
 
 
     public WikiMediator(int capacity, int stalenessInterval){
-        Wiki wiki = new Wiki.Builder().withDomain("en.wikipedia.org").build();
         cache = new FSFTBuffer(capacity, stalenessInterval);
-        StartTime = System.currentTimeMillis() / 1000L;
+        StartTime = (int)(System.currentTimeMillis() / 1000L);
         pageSearches = new HashMap<String, ArrayList>();
         methodsCalls = new ArrayList<Integer>();
     }
+
 
     /**
      * Given a query, return up to limit page titles that match the query string
@@ -37,17 +41,17 @@ public class WikiMediator {
 
             matches = wiki.search(query, limit);
 
-            //adds the timestamp of the request to the hasmap pageSearches
-            if(pageSearches.containsKey(query)){
-                pageSearches.get(query).add((int)(System.currentTimeMillis() / 1000L - StartTime));
-                methodsCalls.add((int)(System.currentTimeMillis() / 1000L - StartTime));
-            }
-            else{
+            //adds the timestamp of the request to the hashmap pageSearches
+        synchronized (this) {
+            if (pageSearches.containsKey(query)) {
+                pageSearches.get(query).add((int) (System.currentTimeMillis() / 1000L - StartTime));
+                methodsCalls.add((int) (System.currentTimeMillis() / 1000L - StartTime));
+            } else {
                 pageSearches.put(query, new ArrayList());
-                pageSearches.get(query).add((int)(System.currentTimeMillis() / 1000L - StartTime));
-                methodsCalls.add((int)(System.currentTimeMillis() / 1000L - StartTime));
+                pageSearches.get(query).add((int) (System.currentTimeMillis() / 1000L - StartTime));
+                methodsCalls.add((int) (System.currentTimeMillis() / 1000L - StartTime));
             }
-
+        }
 
         return matches;
     }
@@ -57,8 +61,9 @@ public class WikiMediator {
      * @param pageTitle
      * @return
      */
-    public String getPage(String pageTitle){
+    public synchronized String getPage(String pageTitle){
         String text = new String();
+        WikiPage page = new WikiPage(pageTitle);
 
         try{
             text = cache.get(pageTitle).toString();
@@ -66,6 +71,7 @@ public class WikiMediator {
         } catch (InvalidObjectException e) {
             e.printStackTrace();
             text = wiki.getPageText(pageTitle);
+            cache.put(page);
         }
 
         if(pageSearches.containsKey(pageTitle)){
@@ -89,21 +95,27 @@ public class WikiMediator {
      * @param limit
      * @return
      */
-    public List<Map.Entry<String, Integer>> zeitgeist(int limit){
-        List<Map.Entry<String, Integer>> mostCommon= new ArrayList<>();
+    public List<String> zeitgeist(int limit){
+        List<String> mostCommon= new ArrayList<>();
         HashMap<String, Integer> reduced = new HashMap<String, Integer>();
 
-        for (Map.Entry<String, ArrayList> entry : pageSearches.entrySet()) {
-            String k = entry.getKey();
-            ArrayList v = entry.getValue();
-            reduced.put(k, v.size());
+        synchronized (this) {
+            for (String key : pageSearches.keySet()) {
+                int size = pageSearches.get(key).size();
+
+                reduced.put(key, size);
+            }
+            methodsCalls.add((int) (System.currentTimeMillis() / 1000L - StartTime));
         }
 
-        mostCommon = reduced.entrySet().stream().sorted(Map.Entry.<String, Integer>comparingByValue()).limit(limit).toList();
+        mostCommon = reduced.entrySet().stream().sorted(Map.Entry.<String, Integer>comparingByValue().reversed()).limit(limit).map(e -> e.getKey())
+                .collect(Collectors.toList());
+
 
 
         return mostCommon;
     }
+
 
     /**
      * returns list of most frequent requests made in last timelimitinseconds seconds,
@@ -116,7 +128,33 @@ public class WikiMediator {
      */
     public List<String> trending(int timeLimitInSeconds, int maxItems){
         List<String> mostFrequent = new ArrayList<>();
+        HashMap<String, Integer> reduced = new HashMap<String, Integer>();
+        //current time = the time right now with respect to the time the object was created
+        int currentTime = (int)(System.currentTimeMillis() / 1000L - StartTime);
 
+        synchronized (this) {
+            for (String key : pageSearches.keySet()) {
+                int count = 0;
+                //threshold time = count trending items between threshold time to current time
+                int ThresholdTime = currentTime - timeLimitInSeconds;
+
+
+                for (int i = pageSearches.get(key).size() - 1; i >= 0; i--) {
+                    int nextTime = (int) pageSearches.get(key).get(i);
+                    if (nextTime < ThresholdTime) {
+                        break;
+                    }
+                    count++;
+                }
+
+                reduced.put(key, count);
+            }
+
+            methodsCalls.add((int) (System.currentTimeMillis() / 1000L - StartTime));
+        }
+
+        mostFrequent = reduced.entrySet().stream().sorted(Map.Entry.<String, Integer>comparingByValue().reversed()).limit(maxItems).map(e -> e.getKey())
+                .collect(Collectors.toList());
 
 
         return mostFrequent;
@@ -132,28 +170,36 @@ public class WikiMediator {
     public int windowedPeakLoad(int timeWindowInSeconds){
         int maxRequest = 0;
         int tempMax = 0;
-        for(int i = 0; i < methodsCalls.size(); i++){
-            for(int j = i; j < methodsCalls.size(); j++){
-                int valueJ = (int) methodsCalls.get(j);
-                int valueI = (int) methodsCalls.get(i);
 
-                if((valueJ - valueI) > timeWindowInSeconds){
-                    if(((j - 1) - i) > tempMax){
-                        tempMax = ((j - 1) - i);
+        synchronized (this) {
+            for (int i = 0; i < methodsCalls.size(); i++) {
+                for (int j = i; j < methodsCalls.size(); j++) {
+                    int valueJ = (int) methodsCalls.get(j);
+                    int valueI = (int) methodsCalls.get(i);
+
+                    if ((valueJ - valueI) > timeWindowInSeconds) {
+                        if (((j) - i) > tempMax) {
+                            tempMax = ((j) - i);
+                        }
+                        break;
+                    } else if (j == methodsCalls.size() - 1) {
+                        if (((j + 1) - i) > tempMax) {
+                            tempMax = (j + 1) - i;
+                        }
+                        break;
                     }
-                    break;
                 }
             }
         }
         maxRequest = tempMax;
         return maxRequest;
     }
+ //TODO
+    //does peak load count itself
 
     public int windowedPeakLoad(){
-        int timeWindowInSeconds = 30;
-        int maxRequest = 0;
 
-        return maxRequest;
+        return windowedPeakLoad(30);
     }
 
     /* TODO: Implement this datatype
